tests/specs/run/node_globals_hints/set_immediate.out
error: Uncaught (in promise) ReferenceError: setImmediate is not defined
setImmediate;
^
    at [WILDCARD]set_immediate.js:1:1

    info: setImmediate is not available in the global scope in Deno.
    hint: Import it explicitly with import { setImmediate } from "node:timers";.
